# attrecto-qbr-task

./: .env.example  .env.prod.example  .gitignore  Blueprint.md  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  REVIEW.md  docker-compose.yml  package-lock.json  pyproject.toml
.planning/: pdrw-35-36-37.md  pdrw-41-tetris.md
deploy/: README.md  smoke-test.sh
docs/plans/: 2026-04-16-001-feat-live-project-dashboard-plan.md  2026-04-23-001-chore-project-scaffolding-plan.md  2026-04-23-002-feat-email-parser-plan.md  2026-04-23-003-feat-llm-client-abstraction-plan.md  2026-04-23-004-feat-extraction-pipeline-plan.md  2026-04-23-005-feat-attention-flag-classification-plan.md  2026-04-23-006-feat-prompt-injection-defense-plan.md  2026-04-23-007-feat-portfolio-health-report-plan.md  2026-04-23-008-feat-cli-entry-point-plan.md  2026-04-23-009-docs-blueprint-plan.md  2026-04-23-010-docs-readme-plan.md  2026-04-23-011-feat-fastapi-htmx-web-app-plan.md  2026-04-23-012-feat-docker-caddy-deployment-plan.md  2026-04-23-013-docs-oracle-vps-runbook-plan.md  2026-04-23-014-feat-demo-seed-dashboard-plan.md  2026-04-23-015-feat-hybrid-llm-routing-plan.md  2026-04-23-016-feat-single-user-login-plan.md  2026-04-23-017-feat-dedup-demo-runs-plan.md  2026-04-23-018-feat-verbose-processing-log-plan.md  2026-04-23-019-feat-tetris-game-plan.md  (+1 more)
prompts/: synthesis.md
scripts/: debug_web.js  screenshot_final.js
tests/: conftest.py  test_auth.py  test_flags.py  test_hybrid.py  test_llm.py  test_parser.py  test_pipeline.py  test_report.py  test_scaffold.py  test_security.py  test_web.py
(+22 files in other folders)
