[project]
name = "qbr"
version = "0.1.0"
description = "Portfolio Health Report generator for Quarterly Business Reviews — AI-driven email analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "anthropic>=0.52.0",
    "ollama>=0.4.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.15.0",
    "rich>=13.0.0",
    "unidecode>=1.3.0",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
qbr = "qbr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qbr", "src/qbr_web"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["qbr", "qbr_web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
